--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,36 @@
 name: Confix Hub project
 
+# Trigger the workflow
 on:
+  # Schedule to run at a specific time using cron
   schedule:
     - cron: "0 0 * * *"  # Runs every day at midnight UTC
-  workflow_dispatch:  # Allows you to manually trigger the workflow as well
+
+  # Manually trigger the workflow
+  workflow_dispatch:
 
 jobs:
-  run-tests:
-    runs-on: ubuntu-latest
-    
+  test:
+    runs-on: ubuntu-latest  # Run the job on the latest Ubuntu version
+
     steps:
       # Checkout the repository code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up Python environment (for example, if using Python)
+      # Set up Python (change version if using another language)
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
-        
+          python-version: "3.x"
+
       # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run the tests
+      # Run tests (e.g., pytest for Python)
       - name: Run tests
         run: |
-          pytest  # Or whatever test command you are using
+          pytest  # Replace with the command to run your tests
