--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,47 @@
-name: Confix Hub project
+name: Run Tests
 
-# Trigger the workflow
+# Trigger the workflow on push, pull request, and schedule
 on:
+  # Run tests when pushing code to the main branch (or another branch)
+  push:
+    branches:
+      - main  # Change to the branch you deploy to (e.g., 'production', 'staging')
+
+  # Run tests when a pull request is opened or updated for the main branch
+  pull_request:
+    branches:
+      - main
+
   # Schedule to run at a specific time using cron
   schedule:
     - cron: "0 0 * * *"  # Runs every day at midnight UTC
 
-  # Manually trigger the workflow
+  # Allow manual trigger via the GitHub Actions UI
   workflow_dispatch:
 
 jobs:
   test:
-    runs-on: ubuntu-latest  # Run the job on the latest Ubuntu version
+    runs-on: ubuntu-latest  # Use the latest Ubuntu environment
 
     steps:
-      # Checkout the repository code
+      # Step to check out the repository code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up Python (change version if using another language)
+      # Set up Python (change this if you're using another language)
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: '3.x'
 
-      # Install dependencies
+      # Install the project dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run tests (e.g., pytest for Python)
+      # Run the tests (e.g., pytest for Python)
       - name: Run tests
         run: |
-          pytest  # Replace with the command to run your tests
+          pytest  # Replace this with the command to run your tests
+
