--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,41 @@
-name: Confix Hub project
+name: Python Tests
 
 on:
-  schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight UTC
-  workflow_dispatch:  # Allows you to manually trigger the workflow as well
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  run-tests:
+  test:
     runs-on: ubuntu-latest
-    
-    steps:
-      # Checkout the repository code
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      # Set up Python environment (for example, if using Python)
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-        
-      # Install dependencies
+          python-version: '3.8'  # Specify your Python version here
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m venv venv
+          source venv/bin/activate
           pip install -r requirements.txt
+          pip install pytest pytest-html
 
-      # Run the tests
       - name: Run tests
         run: |
-          pytest  # Or whatever test command you are using
+          source venv/bin/activate
+          pytest --html=report.html -p no:warnings
+
+      - name: Upload HTML report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-report
+          path: report.html
